Adjusted Css, adding a wrapping div to content, to ensure footer was sticking to bottom of page, even with scrollbars

--- a/p3frontend/src/App.css
+++ b/p3frontend/src/App.css
@@ -1,3 +1,12 @@
+.main-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.wrapping-container {
+  display: block;
+  flex: 1 0 auto;
+}
 .App {
   text-align: center;
 }
@@ -30,10 +39,8 @@
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.12);
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  display: block;
+  width: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
